-
Bug
-
Resolution: Done
-
P1: Critical
-
5.6.0
-
None
-
- Windows 10 x64,
- MinGW-W64 x86_64 5.3.0,
- Qt 5.7-dev (http://code.qt.io/cgit/qt/qt5.git/log/?h=5.7 ).
Hi, everyone,
After applying https://codereview.qt-project.org/#/c/149611/ to branch 5.7 and running static build with MinGW-W64 got errors:
C:\libQT-5.7-dev\src\qtserialbus\lib\libQt5SerialBus.a(qmodbusdevice.o):qmodbusdevice.cpp:(.text+0x2b0): multiple definition of `QT_MODBUS()' .obj/release/mainwindow.o:mainwindow.cpp:(.text+0x870): first defined here C:\libQT-5.7-dev\src\qtserialbus\lib\libQt5SerialBus.a(qmodbusdevice.o):qmodbusdevice.cpp:(.text+0x320): multiple definition of `QT_MODBUS_LOW()' .obj/release/mainwindow.o:mainwindow.cpp:(.text+0x8e0): first defined here collect2.exe: error: ld returned 1 exit status
(log added in attachment).
Regards,
Alexander
- is duplicated by
-
QTBUG-52067 Qt open source static library does not build
-
- Closed
-
For Gerrit Dashboard: QTBUG-51745 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
151832,5 | Fix: 'multiple definition' with static build (Windows). | 5.6 | qt/qtserialbus | Status: MERGED | +2 | 0 |