Fix: 'multiple definition' with static build (Windows).

Task-number: QTBUG-51745
Change-Id: Ied4145969f6c00b42b39830e5165970d3e26047b
Reviewed-by: Alex Blasche <alexander.blasche@theqtcompany.com>